<resources>
    <string name="app_name">Podra</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="agent">Agent</string>
    <string name="company">Company</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="via_sms">Via sms</string>
    <string name="via_email">Via email</string>
    <string name="forgot_your">FORGOT YOUR</string>
    <string name="password">PASSWORD</string>
    <string name="select_which_contact_details_should_we_use_to_reset_your_password">select which contact details should we use to reset your password</string>
    <string name="select_which_contact_details_should_we_use_to">select which contact details should we use to</string>
    <string name="reset_your_password">reset your password</string>
</resources>
