<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <TextView

        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/yellow"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@color/gray"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp" />


        <RelativeLayout
            android:id="@+id/RV_OR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/signup_design"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="30dp">


        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/full_name"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="@string/full_name"
            android:background="@drawable/edite_text"
            android:textSize="12sp"
            android:drawablePadding="15dp"
            android:layout_marginStart="3dp"
            android:drawableStart="@drawable/ic_person_black_24dp" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_below="@id/full_name">

            </View>

        <EditText
            android:id="@+id/email"
            android:layout_below="@id/view1"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:hint="@string/enter_your_email"
            android:drawablePadding="15dp"
            android:textSize="12sp"
            android:layout_marginLeft="3dp"
            android:background="@drawable/edite_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:layout_marginStart="3dp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_below="@id/email">

            </View>

            <EditText
                android:id="@+id/password"
                android:background="@drawable/edite_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/view2"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                android:hint="............"
                android:drawablePadding="15dp"
                android:textSize="12sp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:layout_marginStart="3dp" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_below="@id/password">

            </View>

            <EditText
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/view3"
                android:background="@drawable/edite_text"
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                android:hint="@string/mobile_number"
                android:textSize="12sp"
                android:layout_marginLeft="3dp"
                android:drawablePadding="15dp"
                android:ems="10"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_phone_android_black_24dp"
                android:layout_marginStart="3dp" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_below="@id/phone_num">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@id/view4">

                <RadioGroup
                    android:id="@+id/lin_one"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agent"
                        android:layout_marginTop="7dp"
                        android:textSize="12sp"
                        android:textColor="@color/dark_gray"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_gray"
                        android:layout_marginLeft="20dp"
                        android:text="@string/company"
                        android:layout_marginTop="7dp"
                        android:textSize="12sp"
                        android:layout_marginStart="20dp" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

    <TextView
        android:id="@+id/text_qs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:layout_marginTop="540dp"
        android:textSize="12sp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:layout_marginLeft="182dp"
        android:textStyle="bold"
        android:text="@string/login"
        android:textSize="12sp"
        android:layout_marginStart="182dp" />

    </RelativeLayout>

    </ScrollView>


</RelativeLayout>