<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotpasswordActivity">

    <TextView
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/yellow"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:background="@color/gray"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">


            <TextView
                android:id="@+id/forgot_pass_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your"
                android:textSize="15sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="180dp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp" />
            <TextView
                android:id="@+id/PASSWORD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_below="@id/forgot_pass_txt"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30sp" />
            <TextView
                android:id="@+id/select_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_below="@id/PASSWORD"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/select_which_contact_details_should_we_use_to"
                android:layout_marginStart="30dp" />

            <TextView
                android:id="@+id/reset_txt"
                android:layout_below="@id/select_txt"
                android:layout_marginLeft="30dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_your_password"
                android:layout_marginStart="30dp" />


            <RelativeLayout
                android:layout_below="@id/reset_txt"
                android:id="@+id/RV_via_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/signup_design">
                <LinearLayout
                    android:id="@+id/Lin_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/View_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/via_sms"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/Enter_phone_num"
                    android:layout_below="@id/Lin_two"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edite_text"
                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                    android:drawablePadding="15dp"
                    android:layout_marginLeft="3dp"
                    android:textSize="12sp"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/check_uncheck_forgot_pass"
                    android:hint=".. ... ... 1946"
                    android:drawableStart="@drawable/ic_phone_android_black_24dp"
                    android:drawableEnd="@drawable/check_uncheck_forgot_pass"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="10dp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_below="@id/RV_via_sms"
                android:id="@+id/RV_via_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/signup_design">
                <LinearLayout
                    android:id="@+id/Lin_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/View_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/via_email"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/Enter_email"
                    android:layout_below="@id/Lin_four"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edite_text"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/check_uncheck_forgot_pass"
                    android:hint=".....12@email.com"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableEnd="@drawable/check_uncheck_forgot_pass"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="10dp" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>