<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <TextView
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@color/gray"
        android:id="@+id/RV_LOg"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="30sp"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="30dp" />

        <RelativeLayout
            android:id="@+id/RV_LOGIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/signup_design">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/mail_login"
                android:layout_marginTop="14dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:hint="@string/enter_your_email"
                android:drawablePadding="15dp"
                android:textSize="12sp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/edite_text"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:layout_marginStart="3dp" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_below="@id/mail_login">

            </View>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="14dp"
                android:layout_below="@id/view5"
                android:ems="10"
                android:textSize="12sp"
                android:background="@drawable/edite_text"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                android:hint="............"
                android:drawablePadding="15dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_open_black_24dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_below="@id/RV_LOGIN"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp" />

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>